--- a/example.html
+++ b/example.html
@@ -10,7 +10,8 @@
             BedJS = new BED.BedJS(cnv),
             layer0 = BedJS.getLayer('layer0');
 
-        var sprite = layer0.addSprite(new BED.Sprite());
+        var sprite1 = layer0.addSprite(new BED.Sprite());
+        var sprite2 = layer0.addSprite(new BED.Sprite());
         BedJS.draw();
     </script>
 </head>
