--- a/example.html
+++ b/example.html
@@ -6,45 +6,35 @@
     <script type="module" defer>
         import * as BED from './src/bed.js';
         import Vector2 from './src/Vector2.js';
-        import { RectTexture } from "./src/Texture.js";
+        import { ImageTexture } from "./src/Texture.js";
+
+        window.isDebug = true;
 
         var cnv = document.body.querySelector('#cnv'),
             BedJS = new BED.BedJS(cnv),
             layer0 = BedJS.getLayer('layer0');
 
         var sprite1 = layer0.addSprite(
-            new BED.Sprite({ 
-                position: new Vector2(50, 50), 
-                Origin: new Vector2(25, 25) 
-            }, 
-            new RectTexture({ size: new Vector2(50, 50), fillStyle: 'red', strokeStyle: 'blue', lineWidth: 10, lineJoin: 'round' })
-        ));
-
-
-        var sprite2 = layer0.addSprite(
-            new BED.Sprite({ 
-                    position: new Vector2(100, 100), 
-                    Origin: new Vector2(25, 25) 
-                },
-                sprite1.texture));
+            new BED.Sprite({
+                position: new Vector2(10, 10)
+            },
+                new ImageTexture('logo.png', { 
+                    size: new Vector2(100, 100)
+                })
+            ));
         
+
+        window.sprite1 = sprite1
         function draw(){
-            sprite2.angle-=1;
             BedJS.draw();
             requestAnimationFrame(draw);
         }
         
         draw()
 
-        window.moveRight = ()=>{ sprite1.position.x+=10 }
-        window.moveLeft = ()=>{ sprite1.position.x-=10 }
-
     </script>
 </head>
 <body>
-    <button onclick="moveLeft()">l</button>
-    <button onclick="moveRight()">r</button>
-
     <canvas id="cnv" width="800" height="600" style="border: 1px black solid;"></canvas>
 </body>
 </html>
